<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@drawable/background_gradient"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:rotation="180"
            android:background="@drawable/background_gradient"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="150dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:visibility="gone"
            android:text="@string/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:visibility="gone"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_person"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/full_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:drawableRight="@drawable/ic_person"
            android:text="mr.muhammadsher@mail.ru"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pwd"
            android:inputType="textPassword"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:drawableRight="@drawable/ic_person"
            android:text="admin12345"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/sign"
            android:onClick="check_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageVIew"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/background_white"
        android:padding="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <TextView
        android:id="@+id/login_topic"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageVIew"
        android:layout_centerHorizontal="true"
        android:text="@string/sign"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/change_login_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textStyle="bold"
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    android:padding="10dp"/>
</RelativeLayout>